samples/_failures_safe/1761242984_4385bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_107560a0.c: In function ‘main’:
./samples/SAFE/__tmp_107560a0.c:150:13: error: expected expression at end of input
  150 |             if (filter_level != -
      |             ^~
./samples/SAFE/__tmp_107560a0.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_107560a0.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_107560a0.c:150:13: error: expected declaration or statement at end of input
